Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16278

Missing DELETE operation in COM_STMT_BULK_STMT

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.2.14, 10.3.6
    • 10.2.20
    • OTHER
    • None

    Description

      Current Bulk command (COM_STMT_BULK_STMT) permit insert, update, but not DELETE operations.

      That is a pain because for JDBC, API permit to indicate if the query will have a resultset or not.
      I don't see any reason for not permitting it.
      One advantage is having only one OK_Packet as a results compared to sending lots of queries with each one having an OK_Packet

      Change is just setting a flag to permit this kind of operation.
      The current result is an error "This command is not supported in the prepared statement protocol yet"

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              diego dupin Diego Dupin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: