MDEV-16278: Missing DELETE operation in COM_STMT_BULK_STMT

Allow array binding for DELETE, test it.